src/test/deca/codegen/valid/cast.deca
// Description:
//    cast
//
// Resultats:
//    3
//
// Historique:
//    cree le 01/01/2023

{
   int b = 2;
   b = b + 1;
   println(b);
}


